adding confusion matrices to each model

--- a/Supervised ML Model (Removed Date).ipynb
+++ b/Supervised ML Model (Removed Date).ipynb
@@ -5,15 +5,23 @@
    "id": "39bc232f",
    "metadata": {},
    "source": [
-    "## Supervised Machine Learning Model Removing Temperature Average"
+    "## Supervised Machine Learning Model Removing Date"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13601b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "de00408a",
    "metadata": {},
    "source": [
-    "#### The purpose of this machine learning model is to explore if the model accuracy will be affected by removing the 'Temperature Average' feature. This will help us determine the importance of this feature in predicting an individual's stance."
+    "#### The purpose of this machine learning model is to explore if the model accuracy will be affected by removing the Date feature. This will help us determine the importance of this feature in predicting an individual's stance."
    ]
   },
   {
@@ -800,7 +808,7 @@
    "outputs": [],
    "source": [
     "# Drop ID column; it does not contain useful information for the model\n",
-    "cc_twitter_date_df = cc_twitter_date_df.drop(labels=[\"id\", \"temperature_avg\", \"sentiment\"], axis=1)"
+    "cc_twitter_date_df = cc_twitter_date_df.drop(labels=[\"id\", \"sentiment\", \"date\"], axis=1)"
    ]
   },
   {
@@ -854,7 +862,7 @@
        "      <th>lng</th>\n",
        "      <th>lat</th>\n",
        "      <th>stance</th>\n",
-       "      <th>date</th>\n",
+       "      <th>temperature_avg</th>\n",
        "      <th>topic_Donald Trump versus Science</th>\n",
        "      <th>topic_Global stance</th>\n",
        "      <th>topic_Ideological Positions on Global Warming</th>\n",
@@ -878,7 +886,7 @@
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
        "      <td>0</td>\n",
-       "      <td>20060723</td>\n",
+       "      <td>-1.114768</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -900,7 +908,7 @@
        "      <td>-122.419420</td>\n",
        "      <td>37.774930</td>\n",
        "      <td>0</td>\n",
-       "      <td>20061214</td>\n",
+       "      <td>4.228540</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -922,7 +930,7 @@
        "      <td>-79.791980</td>\n",
        "      <td>36.072640</td>\n",
        "      <td>2</td>\n",
-       "      <td>20061217</td>\n",
+       "      <td>5.478175</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -944,7 +952,7 @@
        "      <td>-121.805790</td>\n",
        "      <td>38.004920</td>\n",
        "      <td>0</td>\n",
-       "      <td>20061221</td>\n",
+       "      <td>-1.652156</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -966,7 +974,7 @@
        "      <td>-1.902691</td>\n",
        "      <td>52.479699</td>\n",
        "      <td>0</td>\n",
-       "      <td>20061231</td>\n",
+       "      <td>4.864521</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -988,7 +996,7 @@
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
        "      <td>0</td>\n",
-       "      <td>20070106</td>\n",
+       "      <td>15.600876</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1010,7 +1018,7 @@
        "      <td>-0.125740</td>\n",
        "      <td>51.508530</td>\n",
        "      <td>0</td>\n",
-       "      <td>20070108</td>\n",
+       "      <td>4.908487</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1032,7 +1040,7 @@
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
        "      <td>0</td>\n",
-       "      <td>20070110</td>\n",
+       "      <td>4.598470</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1054,7 +1062,7 @@
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
        "      <td>0</td>\n",
-       "      <td>20070110</td>\n",
+       "      <td>4.598470</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -1076,7 +1084,7 @@
        "      <td>-0.127647</td>\n",
        "      <td>51.507322</td>\n",
        "      <td>1</td>\n",
-       "      <td>20070111</td>\n",
+       "      <td>4.702218</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1098,17 +1106,17 @@
        "</div>"
       ],
       "text/plain": [
-       "           lng        lat  stance      date  \\\n",
-       "1   -73.949582  40.650104       0  20060723   \n",
-       "7  -122.419420  37.774930       0  20061214   \n",
-       "8   -79.791980  36.072640       2  20061217   \n",
-       "9  -121.805790  38.004920       0  20061221   \n",
-       "11   -1.902691  52.479699       0  20061231   \n",
-       "12  -73.949582  40.650104       0  20070106   \n",
-       "15   -0.125740  51.508530       0  20070108   \n",
-       "21   -0.127647  51.507322       0  20070110   \n",
-       "22   -0.127647  51.507322       0  20070110   \n",
-       "23   -0.127647  51.507322       1  20070111   \n",
+       "           lng        lat  stance  temperature_avg  \\\n",
+       "1   -73.949582  40.650104       0        -1.114768   \n",
+       "7  -122.419420  37.774930       0         4.228540   \n",
+       "8   -79.791980  36.072640       2         5.478175   \n",
+       "9  -121.805790  38.004920       0        -1.652156   \n",
+       "11   -1.902691  52.479699       0         4.864521   \n",
+       "12  -73.949582  40.650104       0        15.600876   \n",
+       "15   -0.125740  51.508530       0         4.908487   \n",
+       "21   -0.127647  51.507322       0         4.598470   \n",
+       "22   -0.127647  51.507322       0         4.598470   \n",
+       "23   -0.127647  51.507322       1         4.702218   \n",
        "\n",
        "    topic_Donald Trump versus Science  topic_Global stance  \\\n",
        "1                                   0                    0   \n",
@@ -1289,7 +1297,7 @@
        "      <th></th>\n",
        "      <th>lng</th>\n",
        "      <th>lat</th>\n",
-       "      <th>date</th>\n",
+       "      <th>temperature_avg</th>\n",
        "      <th>topic_Donald Trump versus Science</th>\n",
        "      <th>topic_Global stance</th>\n",
        "      <th>topic_Ideological Positions on Global Warming</th>\n",
@@ -1312,7 +1320,7 @@
        "      <th>1</th>\n",
        "      <td>-73.949582</td>\n",
        "      <td>40.650104</td>\n",
-       "      <td>20060723</td>\n",
+       "      <td>-1.114768</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1333,7 +1341,7 @@
        "      <th>7</th>\n",
        "      <td>-122.419420</td>\n",
        "      <td>37.774930</td>\n",
-       "      <td>20061214</td>\n",
+       "      <td>4.228540</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1354,7 +1362,7 @@
        "      <th>8</th>\n",
        "      <td>-79.791980</td>\n",
        "      <td>36.072640</td>\n",
-       "      <td>20061217</td>\n",
+       "      <td>5.478175</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1375,7 +1383,7 @@
        "      <th>9</th>\n",
        "      <td>-121.805790</td>\n",
        "      <td>38.004920</td>\n",
-       "      <td>20061221</td>\n",
+       "      <td>-1.652156</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1396,7 +1404,7 @@
        "      <th>11</th>\n",
        "      <td>-1.902691</td>\n",
        "      <td>52.479699</td>\n",
-       "      <td>20061231</td>\n",
+       "      <td>4.864521</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1418,12 +1426,12 @@
        "</div>"
       ],
       "text/plain": [
-       "           lng        lat      date  topic_Donald Trump versus Science  \\\n",
-       "1   -73.949582  40.650104  20060723                                  0   \n",
-       "7  -122.419420  37.774930  20061214                                  0   \n",
-       "8   -79.791980  36.072640  20061217                                  0   \n",
-       "9  -121.805790  38.004920  20061221                                  0   \n",
-       "11   -1.902691  52.479699  20061231                                  0   \n",
+       "           lng        lat  temperature_avg  topic_Donald Trump versus Science  \\\n",
+       "1   -73.949582  40.650104        -1.114768                                  0   \n",
+       "7  -122.419420  37.774930         4.228540                                  0   \n",
+       "8   -79.791980  36.072640         5.478175                                  0   \n",
+       "9  -121.805790  38.004920        -1.652156                                  0   \n",
+       "11   -1.902691  52.479699         4.864521                                  0   \n",
        "\n",
        "    topic_Global stance  topic_Ideological Positions on Global Warming  \\\n",
        "1                     0                                              0   \n",
@@ -1568,7 +1576,7 @@
    "id": "cdf10c61",
    "metadata": {},
    "source": [
-    "### Run the Random Forest Model without Temperature Average"
+    "### Run the Random Forest Model without Date"
    ]
   },
   {
@@ -1598,10 +1606,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b1bd964",
+   "execution_count": 28,
+   "id": "fdedc093",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "      <th>Predicted 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>103407</td>\n",
+       "      <td>72716</td>\n",
+       "      <td>72642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>211244</td>\n",
+       "      <td>545682</td>\n",
+       "      <td>229692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 2</th>\n",
+       "      <td>20495</td>\n",
+       "      <td>18372</td>\n",
+       "      <td>52635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Predicted 0  Predicted 1  Predicted 2\n",
+       "Actual 0       103407        72716        72642\n",
+       "Actual 1       211244       545682       229692\n",
+       "Actual 2        20495        18372        52635"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate the confusion matrix\n",
     "cm = confusion_matrix(y_test, predictions)\n",
@@ -1620,7 +1689,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5628153160264542"
+       "0.5146660520738938"
       ]
      },
      "execution_count": 25,
@@ -1646,11 +1715,11 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       0.37      0.49      0.80      0.42      0.63      0.38    248765\n",
-      "          1       0.88      0.60      0.77      0.71      0.68      0.45    986618\n",
-      "          2       0.17      0.60      0.78      0.26      0.69      0.46     91502\n",
+      "          0       0.31      0.42      0.79      0.35      0.57      0.31    248765\n",
+      "          1       0.86      0.55      0.73      0.67      0.64      0.40    986618\n",
+      "          2       0.15      0.58      0.76      0.24      0.66      0.43     91502\n",
       "\n",
-      "avg / total       0.74      0.58      0.78      0.63      0.67      0.44   1326885\n",
+      "avg / total       0.71      0.53      0.74      0.58      0.63      0.38   1326885\n",
       "\n"
      ]
     }
@@ -1670,24 +1739,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "date: (0.43794996096068295)\n",
-      "lng: (0.23714570602250784)\n",
-      "lat: (0.23213119048359854)\n",
-      "topic_Donald Trump versus Science: (0.02222462742431562)\n",
-      "topic_Weather Extremes: (0.016274413417455127)\n",
-      "topic_Global stance: (0.01048830565855808)\n",
-      "aggressiveness_aggressive: (0.005508922712698946)\n",
-      "aggressiveness_not aggressive: (0.0051250561052439475)\n",
-      "topic_Ideological Positions on Global Warming: (0.005016453976160004)\n",
-      "topic_Undefined / One Word Hashtags: (0.004549844624459598)\n",
-      "topic_Importance of Human Intervantion: (0.004027468088199164)\n",
-      "topic_Seriousness of Gas Emissions: (0.003918656634896995)\n",
-      "topic_Significance of Pollution Awareness Events: (0.0032599346427569405)\n",
-      "gender_male: (0.003113297591610033)\n",
-      "gender_female: (0.0029121343508747874)\n",
-      "topic_Politics: (0.0026617168267096913)\n",
-      "topic_Impact of Resource Overconsumption: (0.0025085088742168005)\n",
-      "gender_undefined: (0.0011838016050550247)\n"
+      "temperature_avg: (0.43643925937425937)\n",
+      "lng: (0.2311300480235803)\n",
+      "lat: (0.22421560545116234)\n",
+      "topic_Donald Trump versus Science: (0.024576425579925235)\n",
+      "topic_Weather Extremes: (0.02074587839902859)\n",
+      "topic_Global stance: (0.015305632388012854)\n",
+      "aggressiveness_aggressive: (0.006378621879146001)\n",
+      "topic_Ideological Positions on Global Warming: (0.00600742120775552)\n",
+      "aggressiveness_not aggressive: (0.005793064945814136)\n",
+      "topic_Undefined / One Word Hashtags: (0.005544515723976828)\n",
+      "topic_Importance of Human Intervantion: (0.00500154985420261)\n",
+      "topic_Seriousness of Gas Emissions: (0.004372742483506865)\n",
+      "topic_Politics: (0.0029253739992061993)\n",
+      "gender_male: (0.002812012692589072)\n",
+      "gender_female: (0.0027355515191801487)\n",
+      "topic_Significance of Pollution Awareness Events: (0.002579896997999523)\n",
+      "topic_Impact of Resource Overconsumption: (0.0024748048922362)\n",
+      "gender_undefined: (0.0009615945884182693)\n"
      ]
     }
    ],
