--- a/Supervised ML Model (All Features).ipynb
+++ b/Supervised ML Model (All Features).ipynb
@@ -1602,8 +1602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "01a6100e",
+   "execution_count": 32,
+   "id": "a1754265",
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1662,7 @@
        "Actual 2        15663        13264        62575"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,10 +1678,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "119930b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6340911482922115"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the accuracy score of the model using the testing data\n",
     "acc_score = balanced_accuracy_score(y_test, predictions)\n",
@@ -1690,10 +1701,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "625bc33e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "          0       0.44      0.55      0.84      0.49      0.68      0.45    248765\n",
+      "          1       0.91      0.67      0.80      0.77      0.73      0.52    986618\n",
+      "          2       0.22      0.68      0.82      0.33      0.75      0.55     91502\n",
+      "\n",
+      "avg / total       0.77      0.65      0.81      0.69      0.72      0.51   1326885\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report of this model\n",
     "print(classification_report_imbalanced(y_test, predictions))"
@@ -1701,10 +1727,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "a6f66c69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentiment: (0.25606438906780177)\n",
+      "date: (0.2128411473577601)\n",
+      "temperature_avg: (0.1467426312747719)\n",
+      "lng: (0.14671673082887177)\n",
+      "lat: (0.14264120642908804)\n",
+      "topic_Donald Trump versus Science: (0.019016731502383387)\n",
+      "topic_Weather Extremes: (0.014841644711303581)\n",
+      "topic_Global stance: (0.012031560628275016)\n",
+      "aggressiveness_aggressive: (0.00508392415275376)\n",
+      "topic_Importance of Human Intervantion: (0.005065614961003845)\n",
+      "topic_Ideological Positions on Global Warming: (0.004672072177191647)\n",
+      "aggressiveness_not aggressive: (0.004563934478277672)\n",
+      "topic_Undefined / One Word Hashtags: (0.0044602547733998636)\n",
+      "topic_Significance of Pollution Awareness Events: (0.00432266607391394)\n",
+      "gender_male: (0.0042128481115135345)\n",
+      "gender_female: (0.003982325329828295)\n",
+      "topic_Seriousness of Gas Emissions: (0.003848415389174651)\n",
+      "topic_Politics: (0.0037600184266181652)\n",
+      "topic_Impact of Resource Overconsumption: (0.0032382722257348552)\n",
+      "gender_undefined: (0.0018936121003341876)\n"
+     ]
+    }
+   ],
    "source": [
     "# Sort the features by importance\n",
     "features = sorted(zip(rf_model.feature_importances_, X.columns), reverse=True)\n",
