--- a/Supervised ML Model (Removed LAT and LNG).ipynb
+++ b/Supervised ML Model (Removed LAT and LNG).ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4e0017ee",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "695ae6cb",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "4              NaN     aggressive  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "a324bde5",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "76b5bae8",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "11         4.864521      aggressive  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "20db54ad",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "65a66a84",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
        "11         4.864521      aggressive  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "02b002b4",
    "metadata": {},
    "outputs": [
@@ -757,7 +757,7 @@
        "11         4.864521      aggressive  2006-12-31  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "0f6b733c",
    "metadata": {},
    "outputs": [],
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "230a8f8c",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "7a8201d9",
    "metadata": {},
    "outputs": [],
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "5cca943d",
    "metadata": {},
    "outputs": [],
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "76771963",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1207,7 @@
        "23                              1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "3024bbea",
    "metadata": {},
    "outputs": [],
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "fd93fbb8",
    "metadata": {},
    "outputs": [],
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "c2aa348b",
    "metadata": {},
    "outputs": [
@@ -1464,7 +1464,7 @@
        "11                              0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "8a8c8d35",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1497,7 @@
        "Name: stance, Length: 5307538, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "b2303700",
    "metadata": {},
    "outputs": [
@@ -1522,7 +1522,7 @@
        "Name: stance, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "11a834b1",
    "metadata": {},
    "outputs": [],
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a2eef86c",
    "metadata": {},
    "outputs": [],
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8a115760",
    "metadata": {},
    "outputs": [],
@@ -1580,21 +1580,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "50d5e48f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the confusion matrix\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\", \"Actual 2\"], columns=[\"Predicted 0\", \"Predicted 1\", \"Predicted 2\"])\n",
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "119930b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5426183914009868"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the accuracy score of the model using the testing data\n",
     "acc_score = balanced_accuracy_score(y_test, predictions)\n",
@@ -1603,25 +1607,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "625bc33e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
-      "\n",
-      "          0       0.35      0.48      0.79      0.40      0.62      0.37    248765\n",
-      "          1       0.88      0.57      0.77      0.69      0.66      0.43    986618\n",
-      "          2       0.15      0.58      0.77      0.24      0.67      0.43     91502\n",
-      "\n",
-      "avg / total       0.73      0.56      0.77      0.61      0.66      0.42   1326885\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print the classification report of this model\n",
     "print(classification_report_imbalanced(y_test, predictions))"
@@ -1629,34 +1618,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a6f66c69",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "temperature_avg: (0.5457351017013892)\n",
-      "date: (0.3611751214549366)\n",
-      "topic_Donald Trump versus Science: (0.022394965440873157)\n",
-      "topic_Weather Extremes: (0.014364543009443054)\n",
-      "topic_Global stance: (0.012973405087208213)\n",
-      "aggressiveness_aggressive: (0.006056012384181289)\n",
-      "aggressiveness_not aggressive: (0.005451570125294359)\n",
-      "topic_Undefined / One Word Hashtags: (0.00515258684861825)\n",
-      "topic_Importance of Human Intervantion: (0.00465988634292495)\n",
-      "topic_Ideological Positions on Global Warming: (0.004433417348574839)\n",
-      "topic_Seriousness of Gas Emissions: (0.003747125175978381)\n",
-      "topic_Significance of Pollution Awareness Events: (0.0031309894854493338)\n",
-      "gender_male: (0.002584063852849225)\n",
-      "topic_Politics: (0.0025259609855983276)\n",
-      "gender_female: (0.0024422529281400433)\n",
-      "topic_Impact of Resource Overconsumption: (0.0023828882523507515)\n",
-      "gender_undefined: (0.0007901095761900324)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sort the features by importance\n",
     "features = sorted(zip(rf_model.feature_importances_, X.columns), reverse=True)\n",
