--- a/Supervised ML Model (Removed Sentiment).ipynb
+++ b/Supervised ML Model (Removed Sentiment).ipynb
@@ -1622,6 +1622,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f59ac742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the confusion matrix\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\", \"Actual 2\"], columns=[\"Predicted 0\", \"Predicted 1\", \"Predicted 2\"])\n",
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "id": "119930b7",
    "metadata": {},
